FullQa New/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>LeanData__Reporting_Cost__c</fullName>
        <label>Reporting Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_FT_Attribution_Amount__c</fullName>
        <label>LD FT Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_FT_Bookings_Attribution__c</fullName>
        <label>LD FT Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Lift__c</fullName>
        <label>Reporting Lift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_MT_Attribution_Amount__c</fullName>
        <label>LD MT Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Num_Target_Campaign_Members__c</fullName>
        <label>Number of Target Campaign Members</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Number_Of_Campaign_Members__c</fullName>
        <label>Reporting Number of Campaign Members</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Number_Of_Opportunities__c</fullName>
        <label>Reporting Number of Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Number_Of_Touches__c</fullName>
        <label>Reporting Number of Touches</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_On_Target__c</fullName>
        <label>Reporting On-Target</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Opportunity_Close_Rate__c</fullName>
        <label>Reporting Opportunity Close Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>List_Size__c</fullName>
        <label>List / Audience Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMEmailFormula__c</fullName>
        <formula>IF(AND(TEXT(Marketing_Manager__c)&lt;&gt;&quot;&quot;,NOT(ISPICKVAL( Marketing_Manager__c ,&quot;Other&quot;))),

LEFT(TEXT( Marketing_Manager__c ),FIND(&quot; &quot;,TEXT( Marketing_Manager__c )) - 1) 

&amp; &quot;.&quot; &amp; 

RIGHT(TEXT( Marketing_Manager__c ),LEN(TEXT( Marketing_Manager__c )) - FIND(&quot; &quot;,TEXT( Marketing_Manager__c )))

&amp; &quot;@avalara.com&quot;,

NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MM Email Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aggregates</fullName>
                </value>
                <value>
                    <fullName>Airlines</fullName>
                </value>
                <value>
                    <fullName>Biofuels</fullName>
                </value>
                <value>
                    <fullName>Coach Fleet</fullName>
                </value>
                <value>
                    <fullName>Commercial Industrial</fullName>
                </value>
                <value>
                    <fullName>Common Carrier</fullName>
                </value>
                <value>
                    <fullName>Equipment Supplier/Mfg</fullName>
                </value>
                <value>
                    <fullName>Food Service</fullName>
                </value>
                <value>
                    <fullName>For-Hire Fleet</fullName>
                </value>
                <value>
                    <fullName>Fuel Jobber</fullName>
                </value>
                <value>
                    <fullName>Fuel Retail</fullName>
                </value>
                <value>
                    <fullName>Fuel Supplier</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>LTL</fullName>
                </value>
                <value>
                    <fullName>Lubricants</fullName>
                </value>
                <value>
                    <fullName>Marine</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Oil &amp; Gas</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Private Fleet</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
                <value>
                    <fullName>Sanitation</fullName>
                </value>
                <value>
                    <fullName>Telecom</fullName>
                </value>
                <value>
                    <fullName>Terminal Operator</fullName>
                </value>
                <value>
                    <fullName>Trading Companies</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketingManagerEmail__c</fullName>
        <label>Marketing Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Marketing_Invoice_Totals__c</fullName>
        <label>Marketing Invoice Totals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Manager__c</fullName>
        <description>Name of the campaign champion that should be contacted if there are questions about the campaign.</description>
        <label>Campaign Marketing Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alison Hill</fullName>
                </value>
                <value>
                    <fullName>Alison Paisley</fullName>
                </value>
                <value>
                    <fullName>Allison Remmer</fullName>
                </value>
                <value>
                    <fullName>Caroline Lalla</fullName>
                </value>
                <value>
                    <fullName>Courtney Carstens</fullName>
                </value>
                <value>
                    <fullName>Courtney McFarlane</fullName>
                </value>
                <value>
                    <fullName>Craig Danz</fullName>
                </value>
                <value>
                    <fullName>Diana Waterman</fullName>
                </value>
                <value>
                    <fullName>Eileen Hansen</fullName>
                </value>
                <value>
                    <fullName>Elle Heinen</fullName>
                </value>
                <value>
                    <fullName>Jaime MacDonell</fullName>
                </value>
                <value>
                    <fullName>Jennifer Gish</fullName>
                </value>
                <value>
                    <fullName>Jessica Davis</fullName>
                </value>
                <value>
                    <fullName>Katie Pate</fullName>
                </value>
                <value>
                    <fullName>Kerry Alexander</fullName>
                </value>
                <value>
                    <fullName>Mark Carpenter</fullName>
                </value>
                <value>
                    <fullName>Martina Chavez</fullName>
                </value>
                <value>
                    <fullName>Meguire Heston</fullName>
                </value>
                <value>
                    <fullName>Melody Hutchinson</fullName>
                </value>
                <value>
                    <fullName>Morgan Coleman</fullName>
                </value>
                <value>
                    <fullName>Morgan Vos</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pamela Guyton</fullName>
                </value>
                <value>
                    <fullName>Patti Passinault</fullName>
                </value>
                <value>
                    <fullName>Robin Conner</fullName>
                </value>
                <value>
                    <fullName>Ryan O&apos;Donnell</fullName>
                </value>
                <value>
                    <fullName>Savannah Rezabek</fullName>
                </value>
                <value>
                    <fullName>Shelbey Davis</fullName>
                </value>
                <value>
                    <fullName>Stephen Johnson</fullName>
                </value>
                <value>
                    <fullName>Steven Dunston</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Program__c</fullName>
        <description>Used by marketing manager to track program activity across group.

https://jira.avalara.com/browse/IBST-4424</description>
        <label>Marketing Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marketing_Program</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Team__c</fullName>
        <description>Purpose: The Marketing team executing the campaign
Integrated: Populated manually during campaign setup in SFDC
Change: Level 1 
Custodian: Marketing – Jessica Davis</description>
        <label>Marketing Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising/PR</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Demand Gen</fullName>
                </value>
                <value>
                    <fullName>Paid Digital</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Unpaid Digital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MiscOnSiteActual__c</fullName>
        <description>The actual miscellaneous on site fees associated with the event</description>
        <inlineHelpText>electrical, Internet, cleaning, lead capture, catering, materials handling, etc</inlineHelpText>
        <label>on-site services (Actual)</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MiscOnSiteBudget__c</fullName>
        <description>The budgeted cost of miscellaneous on site fees</description>
        <inlineHelpText>electrical, Internet, cleaning, lead capture, catering, materials handling, etc</inlineHelpText>
        <label>on-site services (Budget)</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc_Cost_Actual__c</fullName>
        <label>Misc. Cost (Actual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MyLodge_Id__c</fullName>
        <description>This field will be used to keep track of mylodge id.</description>
        <externalId>true</externalId>
        <label>MyLodge Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MyLodge_Parent_Id__c</fullName>
        <externalId>true</externalId>
        <label>MyLodge Parent Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPX_Surveys__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NPX Surveys</label>
        <referenceTo>NPX_Surveys__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NoofAttendeesActual__c</fullName>
        <description>The number of people that actually showed up to the event
Label Updated: IBST-16664</description>
        <inlineHelpText>The number of people that actually showed up to the event</inlineHelpText>
        <label>Total Actual Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoofAttendeesBudget__c</fullName>
        <description>The number of people budgeted to attend the event
Label Updated: IBST-16664</description>
        <inlineHelpText>The number of people budgeted to attend the event</inlineHelpText>
        <label>Total Expected Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Marketing Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Num_Expected_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of opportunities forecast to come from the campaign.</description>
        <inlineHelpText>The number of opportunities forecast to come from the campaign.  Will mostly be used for tracking webinar ROI.</inlineHelpText>
        <label>Num Expected Opportunities</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <description>Purpose:  How is this campaign being presented to the audience
Integrated:  
Change: Level 1 
Custodian: Marketing – Jessica Davis</description>
        <label>Offer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Case Study</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Direct Response</fullName>
                </value>
                <value>
                    <fullName>Emergency Service Notice</fullName>
                </value>
                <value>
                    <fullName>Event Follow Up</fullName>
                </value>
                <value>
                    <fullName>Free Rates</fullName>
                </value>
                <value>
                    <fullName>Free Trial</fullName>
                </value>
                <value>
                    <fullName>General Contact</fullName>
                </value>
                <value>
                    <fullName>Multiple Offers</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>OBTM</fullName>
                </value>
                <value>
                    <fullName>Online Buying</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Product Offering</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Revive</fullName>
                </value>
                <value>
                    <fullName>Service Notification</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Website Visit</fullName>
                </value>
                <value>
                    <fullName>Web Tools</fullName>
                </value>
                <value>
                    <fullName>Whitepaper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Opportunity_Weighted_Value__c</fullName>
        <label>Open Opportunity Weighted Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Rate__c</fullName>
        <label>Open Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OppCloseDate__c</fullName>
        <formula>DATE(
YEAR(TODAY()),
MONTH(TODAY()),
IF(
MONTH(TODAY())= 12,
DATE(YEAR(TODAY()), 12, 31) - TODAY(),
DATE(YEAR(TODAY()),
MONTH(TODAY()) + 1, 1) - TODAY() - 1) +
DAY(TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Forecast__c</fullName>
        <formula>IF(ISPICKVAL (Type , &quot;Asset - Internal (EA)&quot;),  Lead_Goals__c *0.08,
IF(ISPICKVAL (Type , &quot;Webinar - Internal (WB)&quot;),  Lead_Goals__c *0.12,
IF(ISPICKVAL (Type , &quot;Webinar - 3rd Party (WB)&quot;),  Lead_Goals__c *0.16,
IF(ISPICKVAL (Type , &quot;Tradeshow (TS)&quot;),  Lead_Goals__c *0.12,
IF(ISPICKVAL (Type , &quot;User Group (UG)&quot;),  Lead_Goals__c *0.30,
IF(ISPICKVAL (Type , &quot;Outbound Call (OC)&quot;),  Lead_Goals__c *0.01,
IF(ISPICKVAL (Type , &quot;Asset - 3rd party (EA)&quot;),  Lead_Goals__c *0.08,null)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PBP_Event_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate the Campaign ID was loaded to a PBP event (completed) during Flow from Create new Campaign button.</description>
        <label>PBP Event Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PBP_Event_ID__c</fullName>
        <description>Used when creating new Campaigns for PBP Events</description>
        <label>PBP Event ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBP_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to mark campaigns that have been recently created to re-upload campaign ID to PBP Event records.</description>
        <label>PBP Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPC_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box will indicate wether or not this campaign is a pay-per-click campaign or not.</description>
        <label>PPC Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PMM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PPM_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PYRevenue__c</fullName>
        <description>The amount of revenue generated by this TradeShow last year</description>
        <inlineHelpText>The amount of revenue generated by this TradeShow last year</inlineHelpText>
        <label>PY Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Asset_1__c</fullName>
        <formula>Parent.Campaign_Asset_1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Asset 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Asset_2__c</fullName>
        <formula>Parent.Campaign_Asset_2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Asset 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Campaign_Name__c</fullName>
        <formula>Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Partner Account associated with a Webinar</description>
        <inlineHelpText>The Partner Account associated with a Webinar</inlineHelpText>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartnerAudience__c</fullName>
        <label>PartnerAudience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACP</fullName>
                </value>
                <value>
                    <fullName>MSP</fullName>
                </value>
                <value>
                    <fullName>DSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PartnerEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not a Campaign is targeted towards Partners or End Users</description>
        <inlineHelpText>Check this box if this Campaign is targeted towards developing Partner relationships (as opposed to end users)</inlineHelpText>
        <label>Partner Event?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartnerID__c</fullName>
        <formula>CASESAFEID( PartnerAccount__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PartnerID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Budget_Category__c</fullName>
        <description>used to track partner campaigns 
Owner: Strategic Alliance: Liz Anderson
Jira ticket: SFCOM-7873
Deprecation Request: IBST-16664</description>
        <label>(Deprecated) Partner Budget Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Publications</fullName>
                </value>
                <value>
                    <fullName>BDF/MDF/Co-op</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Event Enhancement</fullName>
                </value>
                <value>
                    <fullName>List Purchase</fullName>
                </value>
                <value>
                    <fullName>Memberships</fullName>
                </value>
                <value>
                    <fullName>Online Advertising</fullName>
                </value>
                <value>
                    <fullName>Outsource Services</fullName>
                </value>
                <value>
                    <fullName>Partner Appreciation</fullName>
                </value>
                <value>
                    <fullName>Partner Collateral</fullName>
                </value>
                <value>
                    <fullName>Partner Spiff/Gifts</fullName>
                </value>
                <value>
                    <fullName>Partner Training</fullName>
                </value>
                <value>
                    <fullName>Pay to Play</fullName>
                </value>
                <value>
                    <fullName>Swag</fullName>
                </value>
                <value>
                    <fullName>Tools</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Territory__c</fullName>
        <description>Used to track Campaigns by the related partner account&apos;s territory. Formula pulls from the related account field.
Owner: Liz anderson IBST - 172</description>
        <formula>TEXt(PartnerAccount__r.Partner_Territory__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenter_Required__c</fullName>
        <description>Purpose: If Presenter Included, they will need to complete the Presenter Lookup field.
Integrated: No 
Change: Level 1 
Custodian: Marketing/Partner Dev. Yvonne, Liz A.</description>
        <inlineHelpText>If Presenter needs to be included, you must complete who the presenter will be in the Presenter Lookup field.</inlineHelpText>
        <label>Session Included</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Avalara Sales Rep that is presenting in the Webinar</description>
        <inlineHelpText>The Avalara Sales Rep that is presenting in the Webinar</inlineHelpText>
        <label>Presenter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Print_Cost_Actual__c</fullName>
        <label>Print Cost (Actual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Print_Cost_Budget__c</fullName>
        <label>Print Cost (Budget)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProducedBy__c</fullName>
        <description>This is the organization that is producing the show i.e. Microsoft produces the Convergence TradeShow</description>
        <inlineHelpText>This is the organization that puts on the show i.e. Microsoft produces the Convergence TradeShow</inlineHelpText>
        <label>Produced By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Determination</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promotions_Actual__c</fullName>
        <label>Promotions (Actual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promotions_Budget__c</fullName>
        <label>Promotions (Budget)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <label>Publisher</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting Web</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Bob Scott’s</fullName>
                </value>
                <value>
                    <fullName>Business.com</fullName>
                </value>
                <value>
                    <fullName>Business Finance Solution Journal</fullName>
                </value>
                <value>
                    <fullName>BuyerZone</fullName>
                </value>
                <value>
                    <fullName>California Apparel News</fullName>
                </value>
                <value>
                    <fullName>CallSquad</fullName>
                </value>
                <value>
                    <fullName>Card Not Present</fullName>
                </value>
                <value>
                    <fullName>CFO Magazine</fullName>
                </value>
                <value>
                    <fullName>CFO Network</fullName>
                </value>
                <value>
                    <fullName>Chain Store Age</fullName>
                </value>
                <value>
                    <fullName>Compliance Week</fullName>
                </value>
                <value>
                    <fullName>ComputerWorld</fullName>
                </value>
                <value>
                    <fullName>Construction Executive</fullName>
                </value>
                <value>
                    <fullName>CPA Academy</fullName>
                </value>
                <value>
                    <fullName>CPA Directory</fullName>
                </value>
                <value>
                    <fullName>Crafts Report</fullName>
                </value>
                <value>
                    <fullName>CRN</fullName>
                </value>
                <value>
                    <fullName>Destination CRM</fullName>
                </value>
                <value>
                    <fullName>Digital Transactions</fullName>
                </value>
                <value>
                    <fullName>Emedia</fullName>
                </value>
                <value>
                    <fullName>Financial Executives International</fullName>
                </value>
                <value>
                    <fullName>Free Web Monitoring</fullName>
                </value>
                <value>
                    <fullName>Furniture Today</fullName>
                </value>
                <value>
                    <fullName>IDG</fullName>
                </value>
                <value>
                    <fullName>IMA</fullName>
                </value>
                <value>
                    <fullName>INC Mag</fullName>
                </value>
                <value>
                    <fullName>IndustryWeek</fullName>
                </value>
                <value>
                    <fullName>Innovation Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualifies_for_Bizible_Attribution__c</fullName>
        <formula>And( 
ISPICKVAL(BusinessArea__c,&quot;Avatax&quot;),
Not(ISPICKVAL( Marketing_Team__c,&quot;Inbound&quot;)), 
Not(ISPICKVAL( Marketing_Team__c,&quot;Customer&quot;)), 
OR( 
ISPICKVAL(Type,&quot;Banner&quot;), 
ISPICKVAL(Type,&quot;Content Syndication&quot;), 
ISPICKVAL(Type,&quot;Corporate Sponsored Event&quot;), 
ISPICKVAL(Type,&quot;Customer Loyalty Event&quot;), 
ISPICKVAL(Type,&quot;Direct&quot;), 
ISPICKVAL(Type,&quot;Direct Mail&quot;), 
ISPICKVAL(Type,&quot;Impact Event&quot;), 
ISPICKVAL(Type,&quot;Internal Database Email&quot;), 
ISPICKVAL(Type,&quot;Other&quot;), 
ISPICKVAL(Type,&quot;Partner Training&quot;), 
ISPICKVAL(Type,&quot;Partner Visit&quot;), 
ISPICKVAL(Type,&quot;Print&quot;), 
ISPICKVAL(Type,&quot;Public Relations&quot;), 
ISPICKVAL(Type,&quot;Radio&quot;), 
ISPICKVAL(Type,&quot;Referral&quot;), 
ISPICKVAL(Type,&quot;Retargeting&quot;), 
ISPICKVAL(Type,&quot;Roadshow&quot;), 
ISPICKVAL(Type,&quot;Sales Generated&quot;), 
ISPICKVAL(Type,&quot;Search&quot;), 
ISPICKVAL(Type,&quot;Social&quot;), 
ISPICKVAL(Type,&quot;Telemarketing&quot;), 
ISPICKVAL(Type,&quot;Television&quot;), 
ISPICKVAL(Type,&quot;Tradeshow&quot;), 
ISPICKVAL(Type,&quot;User Group&quot;) 
), 
OR( 
ISPICKVAL(CampaignGroup__c,&quot;Event&quot;), 
ISPICKVAL(CampaignGroup__c,&quot;Media&quot;), 
ISPICKVAL(CampaignGroup__c,&quot;Other Outbound&quot;), 
ISPICKVAL(CampaignGroup__c,&quot;Paid Digital&quot;), 
ISPICKVAL(CampaignGroup__c,&quot;Unpaid Digital&quot;)),
 datevalue(CreatedDate) &gt;= date(2014,8,27)
)</formula>
        <inlineHelpText>True if Campaign Type, Subtype, Group and Team values are all to be included in Bizible Attribution.</inlineHelpText>
        <label>Qualifies for Bizible Attribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>